--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,9 +9,12 @@ on:
       - 'packages/**'
       - 'tests/**'
       - 'playwright.config.ts'
+      - 'playwright.docker.config.ts'
       - 'package.json'
       - 'pnpm-lock.yaml'
       - 'pnpm-workspace.yaml'
+      - 'compose.e2e.yml'
+      - 'docker/**'
       - 'Cargo.toml'
       - 'Cargo.lock'
       - '.github/workflows/playwright.yml'
@@ -24,9 +27,12 @@ on:
       - 'packages/**'
       - 'tests/**'
       - 'playwright.config.ts'
+      - 'playwright.docker.config.ts'
       - 'package.json'
       - 'pnpm-lock.yaml'
       - 'pnpm-workspace.yaml'
+      - 'compose.e2e.yml'
+      - 'docker/**'
       - 'Cargo.toml'
       - 'Cargo.lock'
       - '.github/workflows/playwright.yml'
@@ -47,26 +53,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v6
-    - uses: actions/setup-node@v6
-      with:
-        node-version: lts/*
-    - name: Install Rust toolchain
-      uses: dtolnay/rust-toolchain@stable
-    - name: Cache Rust dependencies
-      uses: Swatinem/rust-cache@v2
-    - name: Build backend
-      run: cargo build --release -p form-forge-api
-    - name: Install dependencies
-      run: npm install -g pnpm && pnpm install
-    - name: Install Playwright Browsers
-      run: pnpm exec playwright install --with-deps
-    - name: Run Playwright tests
-      run: pnpm exec playwright test
+    - name: Build images
+      run: docker compose -f compose.e2e.yml build
       env:
-        NODE_ENV: test
+        DOCKER_BUILDKIT: 1
+    - name: Initialize infrastructure
+      run: docker compose -f compose.e2e.yml up -d db rustfs && docker compose -f compose.e2e.yml --profile init run --rm createbuckets
+    - name: Run E2E tests
+      run: docker compose -f compose.e2e.yml up --no-build --abort-on-container-exit --exit-code-from playwright
+    - name: Cleanup
+      if: always()
+      run: docker compose -f compose.e2e.yml --profile init down -v
     - uses: actions/upload-artifact@v6
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
         path: playwright-report/
+        retention-days: 30
+    - uses: actions/upload-artifact@v6
+      if: ${{ !cancelled() }}
+      with:
+        name: test-results
+        path: test-results/
         retention-days: 30
