--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,19 +17,24 @@
   "scripts": {
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "shadcn": "pnpm dlx shadcn@latest"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@turbo/gen": "^2.7.2",
     "@types/node": "^20.11.24",
     "@types/react": "19.2.10",
     "@types/react-dom": "19.2.3",
-    "typescript": "5.9.3"
+    "jsdom": "^28.0.0",
+    "typescript": "5.9.3",
+    "vitest": "^4.0.17"
   },
   "dependencies": {
-    "@repo/api-spec": "workspace:*",
-    "zod": "^4.3.5",
     "@dnd-kit/core": "^6.3.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -41,6 +46,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toggle": "^1.1.10",
+    "@repo/api-spec": "workspace:*",
     "autoprefixer": "^10.4.23",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
@@ -55,6 +61,7 @@
     "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.3.5"
   }
 }
