--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -10,6 +10,6 @@
     "allowImportingTsExtensions": true,
     "strictNullChecks": true
   },
-  "include": ["src"],
+  "include": ["src", "test-globals.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
