--- a/compose.e2e.yml
+++ b/compose.e2e.yml
@@ -48,8 +48,10 @@ services:
 
   backend:
     build:
-      context: ./apps/api
-      dockerfile: ../../docker/api.Dockerfile
+      context: .
+      dockerfile: docker/api.Dockerfile
+      args:
+        CARGO_FEATURES: json-logs
     restart: "no"
     depends_on:
       db:
