--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -65,6 +65,8 @@ services:
     build:
       context: ./apps/api
       dockerfile: ../../docker/api.Dockerfile
+      args:
+        CARGO_FEATURES: json-logs,otel
     restart: unless-stopped
     depends_on:
       db:
