chore: annotate common_telemetry as intentional dep for cargo-udeps
common_telemetry is used only for feature flag forwarding, not direct
code usage. Mark it ignored so cargo-udeps does not flag it as unused.

--- a/apps/api/crates/common/Cargo.toml
+++ b/apps/api/crates/common/Cargo.toml
@@ -21,3 +21,7 @@ default = ["pretty-logs"]
 pretty-logs = ["common_telemetry/pretty-logs"]
 json-logs = ["common_telemetry/json-logs"]
 otel = ["common_telemetry/otel"]
+
+[package.metadata.cargo-udeps.ignore]
+# common_telemetry is used for feature forwarding only (not direct code usage)
+normal = ["common_telemetry"]
