--- a/package.json
+++ b/package.json
@@ -22,33 +22,33 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
-    "@playwright/test": "^1.57.0",
-    "@types/node": "^25.0.3",
-    "knip": "^5.79.0",
+    "@playwright/test": "^1.58.2",
+    "@types/node": "^25.3.0",
+    "knip": "^5.84.1",
     "pdf-lib": "^1.17.1",
-    "turbo": "^2.7.5",
+    "turbo": "^2.8.10",
     "typescript": "5.9.3",
     "ultracite": "7.0.11"
   },
-  "packageManager": "pnpm@9.15.5",
+  "packageManager": "pnpm@9.15.9",
   "engines": {
     "node": ">=18"
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "^18.3.12",
-      "@types/react-dom": "^18.3.1",
-      "esbuild@<=0.24.2": ">=0.25.0",
-      "@babel/runtime-corejs3@<7.26.10": ">=7.26.10",
       "@babel/helpers@<7.26.10": ">=7.26.10",
+      "@babel/runtime-corejs3@<7.26.10": ">=7.26.10",
+      "@trpc/server@>=11.0.0 <11.8.0": ">=11.8.0",
+      "@types/react": "^18.3.28",
+      "@types/react-dom": "^18.3.7",
       "brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12",
       "brace-expansion@>=2.0.0 <=2.0.1": ">=2.0.2",
-      "tmp@<=0.2.3": ">=0.2.4",
-      "js-yaml@>=4.0.0 <4.1.1": ">=4.1.1",
+      "esbuild@<=0.24.2": ">=0.25.0",
       "glob@>=10.2.0 <10.5.0": ">=10.5.0",
       "glob@>=11.0.0 <11.1.0": ">=11.1.0",
-      "@trpc/server@>=11.0.0 <11.8.0": ">=11.8.0",
-      "qs@<6.14.1": ">=6.14.1"
+      "js-yaml@>=4.0.0 <4.1.1": ">=4.1.1",
+      "qs@<6.14.1": ">=6.14.1",
+      "tmp@<=0.2.3": ">=0.2.4"
     }
   }
 }
