feat: replace ApiErrorResponse with RFC 9457 ProblemDetails

--- a/apps/api/crates/common/Cargo.toml
+++ b/apps/api/crates/common/Cargo.toml
@@ -15,6 +15,7 @@ common_telemetry.workspace = true
 
 [dev-dependencies]
 pretty_assertions.workspace = true
+serde_json.workspace = true
 
 [features]
 default = ["pretty-logs"]
