feat(i18n): add internationalization with English and German support

--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -13,7 +13,10 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@repo/i18n": "workspace:*",
     "@repo/ui": "workspace:^",
+    "i18next": "^25.2.1",
+    "react-i18next": "^15.5.2",
     "@tauri-apps/api": "^2.10.1",
     "@tauri-apps/plugin-dialog": "^2.6.0",
     "@tauri-apps/plugin-opener": "^2.5.3",
