--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,6 +35,9 @@
     "vitest": "^4.0.18"
   },
   "dependencies": {
+    "@repo/i18n": "workspace:*",
+    "i18next": "^25.2.1",
+    "react-i18next": "^15.5.2",
     "@dnd-kit/core": "^6.3.1",
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
