--- a/apps/api/crates/sheets/adapters/db/Cargo.toml
+++ b/apps/api/crates/sheets/adapters/db/Cargo.toml
@@ -11,3 +11,4 @@ async-trait.workspace = true
 sqlx = { workspace = true, features = ["chrono"] }
 tracing.workspace = true
 chrono.workspace = true
+serde_json.workspace = true
