--- a/apps/native/src-tauri/crates/sheets_libsql/Cargo.toml
+++ b/apps/native/src-tauri/crates/sheets_libsql/Cargo.toml
@@ -13,6 +13,7 @@ uuid.workspace = true
 chrono.workspace = true
 anyhow.workspace = true
 tracing.workspace = true
+serde_json.workspace = true
 tokio = { workspace = true, features = ["fs"] }
 
 [dev-dependencies]
